# mtg-search-engine

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  compile_commands.json  docker-compose.yaml  format.sh  generate_char_map.py  generate_languages_files.py  mem_tests.py  requirements.txt  shell.nix  shell_mac.nix
.github/: dependabot.yml
.github/workflows/: address_sanitiser.yml  apitests.yml  coverage.yml  frontend.yml  main.yml  memtests.yml
.github/workflows/setup/: action.yml
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LANGUAGE_SPEC.md  common.py  download_mtg_json.py  generate_char_map.py  generate_formats.py  generate_languages_files.py  mem_tests.py  mem_tests.sh  mtgjson_initial_header.py  requirements.txt  xtree_profile.sh
backend/codegen/: download_mtg_json.py  generate_formats.py
backend/mse/: async_query.c  async_query.h  avl_tree.c  avl_tree.h  card.c  card.h  card_str_match.c  card_txt_fields_trie.c  consumer.c  generator_colour.c  generator_double_fields.c  generator_double_fields.h  generator_set.c  generator_type.c  generator_type.h  generators.c  generators.h  interpretor.c  io_utils.c  io_utils.h  levenshtein_difference.c  levenshtein_difference.h  main.c  mse.c  mse.h  mtg_json.c  mtg_json.h  mtg_json_indexes.c  mtg_json_indexes.h  query_parser.peg  query_parser_internals.c  re2_wrapper.cpp  re2_wrapper.h  save.c  save.h  search.c  search.h  set.c  thread_pool.c  thread_pool.h  (+4 more)
backend/tests/: invalid_queries.txt  main.c  system_test.c  test_async_query.c  test_async_query.h  test_avl_tree.h  test_card.c  test_card.h  test_card.json  test_card_no_originalText.json  test_card_str_match.c  test_card_str_match.h  test_formats.c  test_formats.h  test_generator_colours.c  test_generator_double_fields.c  test_generator_set.c  test_generator_txt.c  test_generator_validation.c  test_generators.c  test_interpretor.c  test_interpretor.h  test_io_utils.h  test_levenshtein_difference.c  test_levenshtein_difference.h  test_mse_langs.c  test_mtg_json.h  test_parser.c  test_re2.h  test_save.c  test_search.c  test_set.c  test_thread_pool.h  test_utf8_normalisation.c  test_utf8_normalisation.h  test_uuid.c  valid_queries.txt
backend/web-api/: async_query.c  async_query.h  facil_server.c  facil_server.h  main.c  query.c  query.h  server.c  swagger.yaml
charts/mse-backend/: Chart.yaml  values.yaml
charts/mse-backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/mse-backend/templates/tests/: test-connection.yaml
charts/mse-frontend/: Chart.yaml  values.yaml
charts/mse-frontend/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/mse-frontend/templates/tests/: test-connection.yaml
frontend/: .dockerignore  Dockerfile  env.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: apiDefaultUrl.ts  error.tsx  layout.tsx  page.tsx  randomQuery.tsx  searchBar.tsx  searchUrl.ts
frontend/src/app/[...query]/: card.tsx  page.tsx
frontend/src/app/card/[id]/: page.tsx
frontend/src/app/q/: card.tsx  colour.tsx  oracle.tsx  page.tsx  pageChanger.tsx  setmoji.tsx
frontend/src/app/q/[...query]/: card.tsx  colour.tsx  manamoji.tsx  oracle.tsx  page.tsx  pageChanger.tsx
frontend/src/app/q/[query]/[page]/: card.tsx  colour.tsx  manamoji.tsx  page.tsx  pageChanger.tsx
frontend/src/components/: colour.tsx  legality.tsx  manamoji.tsx  oracle.tsx  typeLine.tsx
frontend/src/model/: card.ts  typeline.ts
go-api/: .gitignore  README.md  api.go  api_test.go  colours.go  format_legalities.go  go.mod  sort_types.go
mse/: avl_tree.c  avl_tree.h  calc.peg  card.c  card.h  card_str_match.c  card_str_match.h  card_txt_fields_trie.c  card_txt_fields_trie.h  consumer.c  consumer.h  generator_colour.c  generator_colour.h  generator_double_fields.c  generator_double_fields.h  generator_name.c  generator_name.h  generator_oracle.c  generator_oracle.h  generator_set.c  generator_set.h  generators.c  generators.h  interpretor.c  interpretor.h  io_utils.c  io_utils.h  main.c  mse.c  mse.h  mtg_json.c  mtg_json.h  mtg_json_indexes.c  mtg_json_indexes.h  query_parser.h  query_parser.l  query_parser.peg  query_parser.y  query_parser_internals.c  re2_wrapper.cpp  (+11 more)
scripts/cmake/: CodeCoverage.cmake
src/: avl_tree.c  avl_tree.h  card.c  card.h  card_str_match.c  card_str_match.h  card_txt_fields_trie.c  card_txt_fields_trie.h  consumer.c  consumer.h  generator_colour.c  generator_colour.h  generator_double_fields.c  generator_double_fields.h  generator_name.c  generator_name.h  generator_oracle.c  generator_oracle.h  generator_power.c  generator_power.h  generator_set.c  generator_set.h  generators.c  generators.h  interpretor.c  interpretor.h  io_utils.c  io_utils.h  main.c  mtg_json.c  mtg_json.h  mtg_json_indexes.c  mtg_json_indexes.h  query_builder.c  query_builder.h  query_parser.h  query_parser.l  query_parser.y  search.c  search.h  (+6 more)
src/parser/: parser.h
tests/: invalid_queries.txt  main.c  parser_test_main.c  system_test.c  system_test.h  test_avl_tree.c  test_card.c  test_card.json  test_card_no_originalText.json  test_card_str_match.c  test_card_txt_field_trie.c  test_card_txt_field_trie.h  test_consumer.c  test_generator_colours.c  test_generator_double_fields.c  test_generator_power.c  test_generator_set.c  test_generator_txt.c  test_generator_type.c  test_generator_validation.c  test_generators.c  test_generators.h  test_interpretor.c  test_io_utils.c  test_mse_langs.h  test_mtg_json.c  test_mtg_json.h  test_parser.c  test_re2.c  test_save.c  test_save.h  test_search.c  test_set.c  test_set.h  test_thread_pool.c  test_uuid.c  test_uuid.h  valid_queries.txt
web-api/: async_query.c  async_query.h  main.c  server.c  server.h
